--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-"name": "n8n-on-render",
-"private": true,
-"version": "1.0.0",
-"engines": { "node": ">=18" },
-"scripts": { "start": "n8n start" },
-"dependencies": { "n8n": "^1.60.0" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
