--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
-  ]
+"name": "n8n-on-render",
+"private": true,
+"version": "1.0.0",
+"engines": { "node": ">=18" },
+"scripts": { "start": "n8n start" },
+"dependencies": { "n8n": "^1.0.0" }
 }
